--- a/reflections/pages/moral-choice/read.html
+++ b/reflections/pages/moral-choice/read.html
@@ -7,24 +7,23 @@
   <!-- =========================================================
     SOLITUDE REFLECTIONS — READ PAGE (UNIFIED HEADER VERSION)
     Title: THE MORAL CHOICE OF DUALITY
-    File:  /reflections/pages/the-moral-choice-of-duality/read.html
-    Edit points are clearly labeled below.
+    File:  /reflections/pages/moral-choice/read.html
   ========================================================== -->
 
   <title>The Moral Choice of Duality — Solitude Reflections · Ninox Antolihao</title>
 
-  <!-- ====== EDIT: Short description for search + sharing ====== -->
+  <!-- ====== Description ====== -->
   <meta name="description" content="A reflection on contrast, moral restraint, and why true goodness requires the capacity to do harm and the decision not to." />
 
-  <!-- ====== Canonical (EDIT if your folder name differs) ====== -->
+  <!-- ====== Canonical ====== -->
   <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/moral-choice/read.html" />
 
-  <!-- ====== Open Graph / Facebook Sharing (EDIT paths if needed) ====== -->
+  <!-- ====== Open Graph / Facebook Sharing ====== -->
   <meta property="og:type" content="article" />
   <meta property="og:title" content="The Moral Choice of Duality — Solitude Reflections" />
   <meta property="og:description" content="True goodness requires the capacity to do harm and the decision not to." />
-  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/the-moral-choice-of-duality/cover.jpg" />
-  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/the-moral-choice-of-duality/read.html" />
+  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/moral-choice/moralchoice.jpg" />
+  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/moral-choice/read.html" />
 
   <!-- ====== Twitter (optional) ====== -->
   <meta name="twitter:card" content="summary_large_image" />
@@ -33,16 +32,13 @@
   <link rel="icon" href="/reflections/assets/favicon.ico" />
 
   <!-- ====== Unified header assets (DO NOT REMOVE) ====== -->
-  <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=1" />
-  <script defer src="/reflections/assets/reflections-header.js?v=1"></script>
+  <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=10" />
+  <script defer src="/reflections/assets/reflections-header.js?v=10"></script>
 
   <!-- ====== Main site/reflection styles (keep if you have it) ====== -->
   <link rel="stylesheet" href="/reflections/assets/reflections.css?v=1" />
 
   <style>
-    /* =========================================================
-       Page-only styles (safe to keep)
-    ========================================================== */
     :root{
       --bg:#1f1815;
       --paper:#2a211e;
@@ -60,11 +56,11 @@
       line-height:1.75;
     }
 
-    /* This padding assumes a fixed header; adjust if needed */
+    /* Leaves room for fixed header */
     main{
       max-width:900px;
       margin:0 auto;
-      padding:7.2rem 1rem 3.2rem; /* top padding leaves room for fixed header */
+      padding:7.2rem 1rem 3.2rem;
     }
 
     .paper{
@@ -157,9 +153,7 @@
       color:var(--muted);
     }
 
-    audio{
-      width:100%;
-    }
+    audio{ width:100%; }
 
     /* Compact track list */
     .tracklist{
@@ -184,9 +178,7 @@
       user-select:none;
     }
 
-    .track:hover{
-      border-color:rgba(255,184,115,.35);
-    }
+    .track:hover{ border-color:rgba(255,184,115,.35); }
 
     .track.active{
       border-color:rgba(255,184,115,.7);
@@ -223,7 +215,6 @@
       font-size:.88rem;
     }
 
-    /* Small helper note labels */
     .note{
       font-size:.9rem;
       color:var(--muted);
@@ -233,17 +224,11 @@
 </head>
 
 <body>
-  <!-- =========================================================
-    Unified fixed header mount (the JS builds your header + nav)
-    DO NOT REMOVE
-  ========================================================== -->
+  <!-- Unified fixed header mount (JS builds your header + nav) -->
   <div id="reflectionsHeader" data-current="moral-choice"></div>
 
   <main>
     <article class="paper">
-      <!-- ====== EDIT: Cover image file in the SAME folder as this read.html ======
-           Recommended filename: cover.jpg (or change the src below)
-      -->
       <img class="cover"
            src="/reflections/pages/moral-choice/moralchoice.jpg"
            alt="Cover — The Moral Choice of Duality"
@@ -253,28 +238,19 @@
       <p class="subtitle">True goodness requires the capacity to do harm and the decision not to.</p>
 
       <div class="meta">
-        <!-- ====== EDIT: Date / tags if you want ====== -->
         <span>Solitude Reflections</span>
         <span>•</span>
         <span>By Ninox Antolihao</span>
         <span>•</span>
 
-        <!-- ====== PDF (optional) ======
-             Put a PDF in the same folder and rename it here
-        -->
         <a href="/reflections/pages/moral-choice/moral-choice.pdf" target="_blank" rel="noopener">PDF</a>
 
         <span>•</span>
 
-        <!-- Share button is usually provided by your unified header.
-             This link is a backup share (safe to keep). -->
         <a href="#" id="shareFallback">Share</a>
       </div>
 
-      <!-- ================= AUDIO (OPTIONAL) =================
-           If you have MP3(s), set them below in TRACKS.
-           If you don’t have audio yet, you can leave it—nothing breaks.
-      ====================================================== -->
+      <!-- ================= AUDIO ================= -->
       <section class="audio-wrap" aria-label="Audio player">
         <p class="audio-title">Listen</p>
 
@@ -286,13 +262,12 @@
         <ul class="tracklist" id="trackList"></ul>
 
         <p class="note">
-          Tip: Tap a track title to switch. If your track file is updated, append <code>?v=2</code> to avoid cache.
+          Tip: If you update audio later, append <code>?v=2</code> to avoid cache.
         </p>
       </section>
 
       <hr class="rule" />
 
-      <!-- ===================== CONTENT ===================== -->
       <p>Nothing in the material world appears by itself.</p>
 
       <p>
@@ -382,22 +357,16 @@
 
       <hr class="rule" />
 
-      <p>
-        Contrast does not corrupt existence; it reveals it.
-      </p>
+      <p>Contrast does not corrupt existence; it reveals it.</p>
 
-      <p>
-        Goodness is not the absence of darkness, but the discipline of not becoming it.
-      </p>
+      <p>Goodness is not the absence of darkness, but the discipline of not becoming it.</p>
 
       <p>
         And perhaps the question is not whether the divine contains both light and shadow—
         but whether we are willing to admit that we do too.
       </p>
 
-      <p>
-        Only then does choice become meaningful.
-      </p>
+      <p>Only then does choice become meaningful.</p>
 
       <div class="disclaimer">
         <strong>Disclaimer:</strong> The ideas expressed here are personal reflections for contemplation and conversation.
@@ -407,42 +376,26 @@
   </main>
 
   <script>
-    /* =========================================================
-      EDIT SECTION — PAGE CONFIG (safe + simple)
-      Change these to match your folder + audio files.
-    ========================================================== */
-
-    // PAGE SLUG (used by some unified header scripts)
+    /* Page identity (used by unified header scripts as a fallback) */
     window.REFLECTION_PAGE = {
-      slug: "the-moral-choice-of-duality",
+      slug: "moral-choice",
       title: "The Moral Choice of Duality",
-      // EDIT: update if your cover uses another filename
-      cover: "/reflections/pages/the-moral-choice-of-duality/cover.jpg",
-      // EDIT: update if your canonical changes
-      url: "https://stonegrillresto.net/reflections/pages/the-moral-choice-of-duality/read.html"
+      cover: "/reflections/pages/moral-choice/moralchoice.jpg",
+      url: "https://stonegrillresto.net/reflections/pages/moral-choice/read.html"
     };
 
-    // ===== AUDIO TRACKS (OPTIONAL) =====
-    // Put your mp3 files in the SAME folder as this read.html, then set paths below.
-    // Example:
-    // { title:"Track 1", desc:"Full narration", src:"/reflections/pages/the-moral-choice-of-duality/duality.mp3?v=1" }
+    /* ===== AUDIO TRACKS =====
+       Put moralchoice.mp3 in the SAME folder as this read.html
+       (/reflections/pages/moral-choice/)
+    */
     const TRACKS = [
       {
-        title: "Track 1",
-        desc: "Narration (add your file)",
-        src: ""   // <-- EDIT: paste mp3 link here
-      },
-      {
-        title: "Track 2",
-        desc: "Alternate (optional)",
-        src: ""   // <-- EDIT: paste mp3 link here (or leave blank)
+        title: "Moral Choice",
+        desc: "Narration",
+        src: "/reflections/pages/moral-choice/moralchoice.mp3?v=1"
       }
     ];
 
-    /* =========================================================
-      AUDIO UI — compact track list with duration
-      (No external dependencies)
-    ========================================================== */
     const audio = document.getElementById("reflectionAudio");
     const source = document.getElementById("audioSource");
     const trackList = document.getElementById("trackList");
@@ -455,7 +408,6 @@
     }
 
     async function getDuration(src){
-      // Lightweight duration loader (doesn't autoplay)
       return new Promise((resolve) => {
         if(!src) return resolve("");
         const a = document.createElement("audio");
@@ -474,20 +426,16 @@
     function setTrack(index, autoplay=false){
       const t = TRACKS[index];
       if(!t || !t.src) return;
-
       source.src = t.src;
       audio.load();
       setActive(index);
-
       if(autoplay){
-        audio.play().catch(()=>{ /* ignore autoplay blocks */ });
+        audio.play().catch(()=>{});
       }
     }
 
     async function renderTracks(){
       trackList.innerHTML = "";
-
-      // Hide tracklist if all tracks are empty
       const hasAny = TRACKS.some(t => t && t.src && t.src.trim());
       if(!hasAny){
         trackList.style.display = "none";
@@ -519,7 +467,7 @@
 
         const right = document.createElement("div");
         right.className = "track-right";
-        right.textContent = ""; // set after duration loads
+        right.textContent = "";
 
         li.appendChild(left);
         li.appendChild(right);
@@ -534,21 +482,17 @@
 
         trackList.appendChild(li);
 
-        // duration
         const dur = await getDuration(t.src);
         right.textContent = dur;
       }
 
-      // Set first valid track as default
       const firstIndex = TRACKS.findIndex(t => t && t.src && t.src.trim());
       if(firstIndex >= 0) setTrack(firstIndex, false);
     }
 
     renderTracks();
 
-    /* =========================================================
-      SHARE FALLBACK (works even if header share exists)
-    ========================================================== */
+    // Share fallback
     document.getElementById("shareFallback").addEventListener("click", async (e)=>{
       e.preventDefault();
       const shareData = {
@@ -556,7 +500,6 @@
         text: "True goodness requires the capacity to do harm and the decision not to.",
         url: window.location.href
       };
-
       try{
         if(navigator.share){
           await navigator.share(shareData);
@@ -564,15 +507,10 @@
           await navigator.clipboard.writeText(shareData.url);
           alert("Link copied!");
         }
-      }catch(err){
-        // user cancelled or blocked — do nothing
-      }
+      }catch(_){}
     });
 
-    /* =========================================================
-      Service Worker (optional PWA)
-      Keep if you already use SW in /reflections/
-    ========================================================== */
+    // Service Worker (optional)
     if ("serviceWorker" in navigator) {
       navigator.serviceWorker.register("/reflections/service-worker.js").catch(()=>{});
     }
