--- a/reflections/pages/moral-choice/read.html
+++ b/reflections/pages/moral-choice/read.html
@@ -5,37 +5,33 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
   <!-- =========================================================
-    SOLITUDE REFLECTIONS — READ PAGE (UNIFIED HEADER VERSION)
+    SOLITUDE REFLECTIONS — READ PAGE (UNIFIED HEADER)
     Title: THE MORAL CHOICE OF DUALITY
     File:  /reflections/pages/moral-choice/read.html
   ========================================================== -->
 
   <title>The Moral Choice of Duality — Solitude Reflections · Ninox Antolihao</title>
 
-  <!-- ====== Description ====== -->
   <meta name="description" content="A reflection on contrast, moral restraint, and why true goodness requires the capacity to do harm and the decision not to." />
 
-  <!-- ====== Canonical ====== -->
   <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/moral-choice/read.html" />
 
-  <!-- ====== Open Graph / Facebook Sharing ====== -->
+  <!-- Open Graph -->
   <meta property="og:type" content="article" />
   <meta property="og:title" content="The Moral Choice of Duality — Solitude Reflections" />
   <meta property="og:description" content="True goodness requires the capacity to do harm and the decision not to." />
   <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/moral-choice/moralchoice.jpg" />
   <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/moral-choice/read.html" />
 
-  <!-- ====== Twitter (optional) ====== -->
   <meta name="twitter:card" content="summary_large_image" />
 
-  <!-- ====== Favicon ====== -->
   <link rel="icon" href="/reflections/assets/favicon.ico" />
 
-  <!-- ====== Unified header assets (DO NOT REMOVE) ====== -->
-  <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=10" />
-  <script defer src="/reflections/assets/reflections-header.js?v=10"></script>
+  <!-- Unified header assets -->
+  <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=20" />
+  <script defer src="/reflections/assets/reflections-header.js?v=20"></script>
 
-  <!-- ====== Main site/reflection styles (keep if you have it) ====== -->
+  <!-- Optional site styles -->
   <link rel="stylesheet" href="/reflections/assets/reflections.css?v=1" />
 
   <style>
@@ -138,7 +134,7 @@
       padding-top:1rem;
     }
 
-    /* ===== Audio area ===== */
+    /* Audio */
     .audio-wrap{
       margin:1rem 0 1.2rem;
       padding:0.9rem;
@@ -155,7 +151,6 @@
 
     audio{ width:100%; }
 
-    /* Compact track list */
     .tracklist{
       margin:.75rem 0 0;
       padding:0;
@@ -224,11 +219,12 @@
 </head>
 
 <body>
-  <!-- Unified fixed header mount (JS builds your header + nav) -->
+  <!-- ✅ Unified fixed header mount (JS builds the header) -->
   <div id="reflectionsHeader" data-current="moral-choice"></div>
 
   <main>
     <article class="paper">
+
       <img class="cover"
            src="/reflections/pages/moral-choice/moralchoice.jpg"
            alt="Cover — The Moral Choice of Duality"
@@ -242,15 +238,12 @@
         <span>•</span>
         <span>By Ninox Antolihao</span>
         <span>•</span>
-
         <a href="/reflections/pages/moral-choice/moral-choice.pdf" target="_blank" rel="noopener">PDF</a>
-
         <span>•</span>
-
         <a href="#" id="shareFallback">Share</a>
       </div>
 
-      <!-- ================= AUDIO ================= -->
+      <!-- AUDIO -->
       <section class="audio-wrap" aria-label="Audio player">
         <p class="audio-title">Listen</p>
 
@@ -261,9 +254,7 @@
 
         <ul class="tracklist" id="trackList"></ul>
 
-        <p class="note">
-          Tip: If you update audio later, append <code>?v=2</code> to avoid cache.
-        </p>
+        <p class="note">Tip: If you update audio later, append <code>?v=2</code> to avoid cache.</p>
       </section>
 
       <hr class="rule" />
@@ -358,7 +349,6 @@
       <hr class="rule" />
 
       <p>Contrast does not corrupt existence; it reveals it.</p>
-
       <p>Goodness is not the absence of darkness, but the discipline of not becoming it.</p>
 
       <p>
@@ -376,7 +366,7 @@
   </main>
 
   <script>
-    /* Page identity (used by unified header scripts as a fallback) */
+    /* Page identity (fallback for header + sharing logic) */
     window.REFLECTION_PAGE = {
       slug: "moral-choice",
       title: "The Moral Choice of Duality",
@@ -384,16 +374,9 @@
       url: "https://stonegrillresto.net/reflections/pages/moral-choice/read.html"
     };
 
-    /* ===== AUDIO TRACKS =====
-       Put moralchoice.mp3 in the SAME folder as this read.html
-       (/reflections/pages/moral-choice/)
-    */
+    /* AUDIO TRACKS */
     const TRACKS = [
-      {
-        title: "Moral Choice",
-        desc: "Narration",
-        src: "/reflections/pages/moral-choice/moralchoice.mp3?v=1"
-      }
+      { title: "Moral Choice", desc: "Narration", src: "/reflections/pages/moral-choice/moralchoice.mp3?v=1" }
     ];
 
     const audio = document.getElementById("reflectionAudio");
