--- a/reflections/index.html
+++ b/reflections/index.html
@@ -67,6 +67,56 @@
         </div>
       </article>
 
+
+      <!-- =========================================
+           1) CARD:MORAL CHOICE
+           ========================================= -->
+      <article class="reflection-card">
+
+  <!-- Cover + main link -->
+  <a href="/reflections/pages/moral-choice/read.html" class="card-link">
+    <img
+      src="/reflections/pages/moral-choice/moralchoice.jpg"
+      alt="The Moral Choice of Duality"
+      class="card-cover"
+      loading="lazy"
+    >
+
+    <div class="card-body">
+      <h2 class="card-title">THE MORAL CHOICE OF DUALITY</h2>
+
+      <p class="card-subtitle">
+        True goodness requires the capacity to do harm and the decision not to.
+      </p>
+    </div>
+  </a>
+
+  <!-- Action row -->
+  <div class="card-actions">
+
+    <!-- AUDIO -->
+    <a
+      href="/reflections/pages/moral-choice/read.html#audio"
+      class="card-action"
+      title="Listen"
+    >
+      🎧 Listen
+    </a>
+
+    <!-- SHARE -->
+    <a
+      href="https://www.facebook.com/sharer/sharer.php?u=https://stonegrillresto.net/reflections/pages/moral-choice/read.html"
+      target="_blank"
+      rel="noopener"
+      class="card-action"
+      title="Share"
+    >
+      ↗ Share
+    </a>
+
+  </div>
+
+</article>
         <!-- =========================================
            12) CARD: THE SUBCONSCIOUS MIND
            ========================================= -->
