--- a/reflections/index.html
+++ b/reflections/index.html
@@ -69,53 +69,34 @@
 
 
       <!-- =========================================
-           1) CARD:MORAL CHOICE
+           1) CARD: DIVINE PREMISE
            ========================================= -->
-      <article class="reflection-card">
+      <article class="card">
+        <div class="left">
+          <a class="book-link" href="/reflections/pages/moral-choice/read.html" target="_blank" rel="noopener">
+            <img class="book-cover"
+                 src="/reflections/pages/moral-choice/moralchoice.jpg"
+                 alt="the divine premise cover"
+                 onerror="this.src='/reflections/assets/placeholder.jpg'">
+          </a>
+        </div>
+        <div class="right">
+          <h3><a class="title-link" href="/reflections/pages/moral-choice/read.html" target="_blank" rel="noopener">THE DIVINE PREMISE</a></h3>
+          <p>.Goodness is not the absence of darkness, but the discipline of not becoming it. </p>
+        <section class="audio-wrap" id="audio">
+            <p class="label">🎧 play to Listen the devine premise</p>
+            <audio controls preload="auto" style="width:100%">
+              <source src="/reflections/pages/moral-choice/moralchoice.mp3" type="audio/mpeg">
+              Your browser does not support the audio element.
+            </audio>
+        </section>
+          
+          <div class="share-group"
+               data-share-url="https://stonegrillresto.net/reflections/pages/moral-choice/read.html"
+               data-share-title="Moral Choice — Ninox Antolihao"></div>
+        </div>
+      </article>
 
-  <!-- Cover + main link -->
-    <img
-      src="/reflections/pages/moral-choice/moralchoice.jpg"
-      alt="The Moral Choice of Duality"
-      class="card-cover"
-      loading="lazy"
-    >
-
-    <div class="card-body">
-      <h2 class="card-title">THE MORAL CHOICE OF DUALITY</h2>
-
-      <p class="card-subtitle">
-        True goodness requires the capacity to do harm and the decision not to.
-      </p>
-    </div>
-  </a>
-
-  <!-- Action row -->
-  <div class="card-actions">
-
-    <!-- AUDIO -->
-    <a
-      href="/reflections/pages/moral-choice/read.html#audio"
-      class="card-action"
-      title="Listen"
-    >
-      🎧 Listen
-    </a>
-
-    <!-- SHARE -->
-    <a
-      href="https://www.facebook.com/sharer/sharer.php?u=https://stonegrillresto.net/reflections/pages/moral-choice/read.html"
-      target="_blank"
-      rel="noopener"
-      class="card-action"
-      title="Share"
-    >
-      ↗ Share
-    
-
-  </div>
-
-</article>
         <!-- =========================================
            12) CARD: THE SUBCONSCIOUS MIND
            ========================================= -->
