--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
   <!-- =========================================================
-    SOLITUDE REFLECTIONS -- READ PAGE (UNIFIED HEADER)
+    SOLITUDE REFLECTIONS — READ PAGE (UNIFIED HEADER)
     Title: THE MORAL CHOICE OF DUALITY
     File:  /reflections/pages/moral-choice/read.html
   ========================================================== -->
 
-  <title>The Paradox of God -- Solitude Reflections · Ninox Antolihao</title>
+  <title>The Moral Choice of Duality — Solitude Reflections · Ninox Antolihao</title>
 
   <meta name="description" content="A reflection on contrast, moral restraint, and why true goodness requires the capacity to do harm and the decision not to." />
 
@@ -18,10 +18,10 @@
 
   <!-- Open Graph -->
   <meta property="og:type" content="article" />
-  <meta property="og:title" content="The Psradox of God -- Solitude Reflections" />
+  <meta property="og:title" content="The Moral Choice of Duality — Solitude Reflections" />
   <meta property="og:description" content="True goodness requires the capacity to do harm and the decision not to." />
-  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/reflections/pages/the-paradox-of-god/paradoxofgod.jpg" />
-  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/reflections/pages/the-paradox-of-god/read.html" />
+  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/moral-choice/moralchoice.jpg" />
+  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/moral-choice/read.html" />
 
   <meta name="twitter:card" content="summary_large_image" />
 
@@ -220,43 +220,19 @@
 
 <body>
   <!-- ✅ Unified fixed header mount (JS builds the header) -->
-  <div class="page-spacer"></div>
+  <div id="reflectionsHeader" data-current="moral-choice"></div>
 
-  <!-- ============ AUDIO + PLAYLIST ============ -->
-  <section class="audio-shell" id="audioSection">
-     <div class="track-list" id="trackList">
-      <div class="track-header">Playlist</div>
+<section class="audio-wrap" id="audio"></section>
 
-      <!-- TRACK 1 -->
-      <button class="track-row is-active"
-              type="button"
-              data-src="/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3?v=1">
-        <div>
-          <div class="track-main">The Paradox of God</div>
-          <div class="track-meta">Main narration -- quiet.</div>
-        </div>
-        <div class="track-duration">04:08</div>
-      </button>
+<script>
+  window.REFLECTION_AUDIO = [
+    { title: "The Paradox Of God", src: "/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3" },
+    { title: "Paradox 2nd version", src: "/reflections/pages/the-paradox-of-god/paradoxofgod.mp3"
+ }
+  ];
+</script>
 
-      <!-- TRACK 2 -->
-      <button class="track-row"
-              type="button"
-              data-src="/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3?v=1">
-        <div>
-          <div class="track-main">The devine premise</div>
-          <div class="track-meta">Alternate</div>
-        </div>
-        <div class="track-duration">04:33</div>
-      </button>
-    </div>
-    <div class="audio-player">
-      <audio id="reflectionAudio" controls preload="metadata">
-        <source id="audioSource"
-                src="/reflections/pages/the-paradox-of-god/paradoxofgod.mp3?v=1"
-                type="audio/mpeg">
-      </audio>
-    </div>
-  </section>
+<script src="/reflections/assets/reflections-header.js"></script>
 
   <!-- ============ MAIN READING CARD ============ -->
   <main class="page-shell">
