--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -10,18 +10,18 @@
     File:  /reflections/pages/moral-choice/read.html
   ========================================================== -->
 
-  <title>The Moral Choice of Duality — Solitude Reflections · Ninox Antolihao</title>
+  <title>The Paradox of God — Solitude Reflections · Ninox Antolihao</title>
 
   <meta name="description" content="A reflection on contrast, moral restraint, and why true goodness requires the capacity to do harm and the decision not to." />
 
-  <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/moral-choice/read.html" />
+  <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html" />
 
   <!-- Open Graph -->
   <meta property="og:type" content="article" />
-  <meta property="og:title" content="The Moral Choice of Duality — Solitude Reflections" />
+  <meta property="og:title" content="The Paradox of god — Solitude Reflections" />
   <meta property="og:description" content="True goodness requires the capacity to do harm and the decision not to." />
-  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/moral-choice/moralchoice.jpg" />
-  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/moral-choice/read.html" />
+  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/paradoxofgod.jpg" />
+  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god//read.html" />
 
   <meta name="twitter:card" content="summary_large_image" />
 
