--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -18,21 +18,18 @@
 
   <!-- Open Graph -->
   <meta property="og:type" content="article" />
-  <meta property="og:title" content="The Paradox of god — Solitude Reflections" />
+  <meta property="og:title" content="The Paradox Of God — Solitude Reflections" />
   <meta property="og:description" content="True goodness requires the capacity to do harm and the decision not to." />
   <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/paradoxofgod.jpg" />
-  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god//read.html" />
+  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html" />
 
   <meta name="twitter:card" content="summary_large_image" />
 
   <link rel="icon" href="/reflections/assets/favicon.ico" />
 
   <!-- Unified header assets -->
-  <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=20" />
+  <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=28" />
   <script defer src="/reflections/assets/reflections-header.js?v=20"></script>
-
-  <!-- Optional site styles -->
-  <link rel="stylesheet" href="/reflections/assets/reflections.css?v=1" />
 
   <style>
     :root{
@@ -222,17 +219,20 @@
   <!-- ✅ Unified fixed header mount (JS builds the header) -->
   <div id="reflectionsHeader" data-current="moral-choice"></div>
 
-<section class="audio-wrap" id="audio"></section>
+  <main>
+     <!-- AUDIO -->
+      <section class="audio-wrap" aria-label="Audio player">
+        <p class="audio-title">Listen</p>
 
-<script>
-  window.REFLECTION_AUDIO = [
-    { title: "The Paradox Of God", src: "/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3" },
-    { title: "Paradox 2nd version", src: "/reflections/pages/the-paradox-of-god/paradoxofgod.mp3"
- }
-  ];
-</script>
+        <audio id="reflectionAudio" controls preload="metadata">
+          <source id="audioSource" src="" type="audio/mpeg" />
+          Your browser does not support the audio element.
+        </audio>
 
-<script src="/reflections/assets/reflections-header.js"></script>
+        <ul class="tracklist" id="trackList"></ul>
+
+        <p class="note">Tip:Tap play to listen reflection</p>
+      </section>
 
   <!-- ============ MAIN READING CARD ============ -->
   <main class="page-shell">
@@ -295,10 +295,10 @@
   <script>
     /* Page identity (fallback for header + sharing logic) */
     window.REFLECTION_PAGE = {
-      slug: "the-paradox-of-god",
-      title: "The Paradox of God",
+      slug: "moral-choice",
+      title: "The Moral Choice of Duality",
       cover: "/reflections/pages/moral-choice/moralchoice.jpg",
-      url: "https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html"
+      url: "https://stonegrillresto.net/reflections/pages/moral-choice/read.html"
     };
 
     /* AUDIO TRACKS */
