--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -4,239 +4,63 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-  <!-- =========================================================
-    SOLITUDE REFLECTIONS — READ PAGE (UNIFIED HEADER)
-    Title: THE MORAL CHOICE OF DUALITY
-    File:  /reflections/pages/moral-choice/read.html
-  ========================================================== -->
-
   <title>The Paradox of God — Solitude Reflections · Ninox Antolihao</title>
-
-  <meta name="description" content="A reflection on contrast, moral restraint, and why true goodness requires the capacity to do harm and the decision not to." />
+  <meta name="description" content="A quiet reflection on belief, certainty, and the humility of living with mystery." />
 
   <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html" />
-
-  <!-- Open Graph -->
   <meta property="og:type" content="article" />
-  <meta property="og:title" content="The Paradox Of God — Solitude Reflections" />
-  <meta property="og:description" content="True goodness requires the capacity to do harm and the decision not to." />
+  <meta property="og:title" content="The Paradox of God — Solitude Reflections" />
+  <meta property="og:description" content="A reflection on belief, truth, and the courage to live with mystery." />
   <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/paradoxofgod.jpg" />
   <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html" />
-
   <meta name="twitter:card" content="summary_large_image" />
 
   <link rel="icon" href="/reflections/assets/favicon.ico" />
-
-  <!-- Unified header assets -->
-  <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=28" />
-  <script defer src="/reflections/assets/reflections-header.js?v=20"></script>
+  <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=21" />
+  <link rel="stylesheet" href="/reflections/assets/reflections.css?v=1" />
 
   <style>
-    :root{
-      --bg:#1f1815;
-      --paper:#2a211e;
-      --ink:#f3e6dd;
-      --muted:#c9b0a4;
-      --accent:#ffb873;
-      --rule:#6b564c;
-    }
-
-    body{
-      margin:0;
-      background:var(--bg);
-      color:var(--ink);
-      font-family:system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
-      line-height:1.75;
-    }
-
-    /* Leaves room for fixed header */
-    main{
-      max-width:900px;
-      margin:0 auto;
-      padding:7.2rem 1rem 3.2rem;
-    }
-
-    .paper{
-      background:var(--paper);
-      border:1px solid rgba(255,255,255,.06);
-      border-radius:16px;
-      padding:1.2rem 1.1rem;
-      box-shadow:0 18px 60px rgba(0,0,0,.45);
-    }
-
-    .cover{
-      width:100%;
-      border-radius:14px;
-      display:block;
-      border:1px solid rgba(255,255,255,.07);
-      margin-bottom:1rem;
-      background:#000;
-    }
-
-    h1{
-      margin:0.2rem 0 0.4rem;
-      line-height:1.15;
-      letter-spacing:.2px;
-      font-size:1.8rem;
-    }
-
-    .subtitle{
-      margin:0 0 1rem;
-      color:var(--muted);
-      font-size:1.02rem;
-    }
-
-    .meta{
-      display:flex;
-      flex-wrap:wrap;
-      gap:.6rem 1rem;
-      align-items:center;
-      margin:0.2rem 0 1rem;
-      color:var(--muted);
-      font-size:0.92rem;
-    }
-
-    .meta a{
-      color:var(--accent);
-      text-decoration:none;
-    }
-    .meta a:hover{ text-decoration:underline; }
-
-    .rule{
-      border:0;
-      border-top:1px solid rgba(255,255,255,.10);
-      margin:1.25rem 0;
-    }
-
-    .section-title{
-      margin:1.25rem 0 0.35rem;
-      font-size:1.15rem;
-      letter-spacing:.2px;
-    }
-
-    blockquote{
-      margin:1rem 0;
-      padding:0.75rem 0.9rem;
-      border-left:3px solid var(--accent);
-      background:rgba(255,255,255,.04);
-      border-radius:10px;
-      color:var(--ink);
-    }
-
-    .disclaimer{
-      margin-top:1.4rem;
-      font-size:.92rem;
-      color:var(--muted);
-      border-top:1px dashed rgba(255,255,255,.14);
-      padding-top:1rem;
-    }
-
-    /* Audio */
-    .audio-wrap{
-      margin:1rem 0 1.2rem;
-      padding:0.9rem;
-      border-radius:14px;
-      border:1px solid rgba(255,255,255,.08);
-      background:rgba(0,0,0,.15);
-    }
-
-    .audio-title{
-      margin:0 0 .5rem;
-      font-size:1rem;
-      color:var(--muted);
-    }
-
-    audio{ width:100%; }
-
-    .tracklist{
-      margin:.75rem 0 0;
-      padding:0;
-      list-style:none;
-      display:flex;
-      flex-direction:column;
-      gap:.35rem;
-    }
-
-    .track{
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      gap:.8rem;
-      padding:.55rem .65rem;
-      border-radius:12px;
-      border:1px solid rgba(255,255,255,.08);
-      background:rgba(255,255,255,.03);
-      cursor:pointer;
-      user-select:none;
-    }
-
-    .track:hover{ border-color:rgba(255,184,115,.35); }
-
-    .track.active{
-      border-color:rgba(255,184,115,.7);
-      background:rgba(255,184,115,.10);
-    }
-
-    .track-left{
-      min-width:0;
-      display:flex;
-      flex-direction:column;
-      gap:.1rem;
-    }
-
-    .track-name{
-      font-weight:600;
-      font-size:.96rem;
-      white-space:nowrap;
-      overflow:hidden;
-      text-overflow:ellipsis;
-    }
-
-    .track-desc{
-      font-size:.86rem;
-      color:var(--muted);
-      white-space:nowrap;
-      overflow:hidden;
-      text-overflow:ellipsis;
-    }
-
-    .track-right{
-      flex:0 0 auto;
-      color:var(--muted);
-      font-variant-numeric:tabular-nums;
-      font-size:.88rem;
-    }
-
-    .note{
-      font-size:.9rem;
-      color:var(--muted);
-      margin:.4rem 0 0;
-    }
+    :root{--bg:#1f1815;--paper:#2a211e;--ink:#f3e6dd;--muted:#c9b0a4;--accent:#ffb873;}
+    body{margin:0;background:var(--bg);color:var(--ink);font-family:system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;line-height:1.75;}
+    main{max-width:900px;margin:0 auto;padding:7.2rem 1rem 3.2rem;}
+    .paper{background:var(--paper);border:1px solid rgba(255,255,255,.06);border-radius:16px;padding:1.2rem 1.1rem;box-shadow:0 18px 60px rgba(0,0,0,.45);}
+    .cover{width:100%;border-radius:14px;display:block;border:1px solid rgba(255,255,255,.07);margin-bottom:1rem;background:#000;}
+    h1{margin:.2rem 0 .4rem;line-height:1.15;letter-spacing:.2px;font-size:1.8rem;}
+    .subtitle{margin:0 0 1rem;color:var(--muted);font-size:1.02rem;}
+    .audio-wrap{margin:1rem 0 1.2rem;padding:.9rem;border-radius:14px;border:1px solid rgba(255,255,255,.08);background:rgba(0,0,0,.15);}
+    hr{border:0;border-top:1px solid rgba(255,255,255,.10);margin:1.25rem 0;}
   </style>
 </head>
 
 <body>
-  <!-- ✅ Unified fixed header mount (JS builds the header) -->
-  <div id="reflectionsHeader" data-current="moral-choice"></div>
+  <!-- UNIFIED HEADER MOUNT -->
+  <div id="reflectionsHeader" data-current="the-paradox-of-god"></div>
+
+  <!-- UNIFIED AUDIO MOUNT -->
+  <section class="audio-wrap" id="audio"></section>
+
+  <!-- PAGE IDENTITY (for title/share fallback in unified JS) -->
+  <script>
+    window.REFLECTION_PAGE = {
+      slug: "the-paradox-of-god",
+      title: "The Paradox of God",
+      cover: "/reflections/pages/the-paradox-of-god/paradoxofgod.jpg",
+      url: "https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html"
+    };
+
+    // Two tracks (your known filenames)
+    window.REFLECTION_AUDIO = [
+      { title: "The Paradox of God", src: "/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3" },
+      { title: "Paradox of God (Short)", src: "/reflections/pages/the-paradox-of-god/paradoxofgod.mp3" }
+    ];
+  </script>
+
+  <!-- LOAD UNIFIED ENGINE ONCE -->
+  <script src="/reflections/assets/reflections-header.js?v=21"></script>
 
   <main>
-     <!-- AUDIO -->
-      <section class="audio-wrap" aria-label="Audio player">
-        <p class="audio-title">Listen</p>
-
-        <audio id="reflectionAudio" controls preload="metadata">
-          <source id="audioSource" src="" type="audio/mpeg" />
-          Your browser does not support the audio element.
-        </audio>
-
-        <ul class="tracklist" id="trackList"></ul>
-
-        <p class="note">Tip:Tap play to listen reflection</p>
-      </section>
-
-  <!-- ============ MAIN READING CARD ============ -->
-  <main class="page-shell">
-    <article class="reading-card">
+    <article class="paper">
+      <img class="cover" src="/reflections/pages/the-paradox-of-god/paradoxofgod.jpg" alt="The Paradox of God cover">
 
       <h1>The Paradox of God</h1>
       <div class="subtitle">
@@ -244,186 +68,46 @@
         On belief, truth, and the mystery that cannot be named.
       </div>
 
-      <p class="dropcap">
-        Anyone who claims to know the full truth about God speaks from
-        illusion. For how can the finite explain the infinite? How can a
-        single mind, bound by language and memory and fear, hold the total
-        knowledge of a reality it did not create?
+      <p>
+        Anyone who claims to know the full truth about God speaks from illusion.
+        For how can the finite explain the infinite? How can a single mind, bound by language,
+        memory, and fear, hold the total knowledge of a reality it did not create?
       </p>
 
       <p>
-        Yet this is what many religions quietly promise: certainty -- a God
-        perfectly mapped, fully defined, with motives explained and plans
-        decoded. Do this, believe this, repeat this, and the mystery becomes
-        manageable, safe, familiar. The story stops being a mirror and
+        Yet this is what many religions quietly promise: certainty — a God perfectly mapped,
+        fully defined, with motives explained and plans decoded. Do this, believe this, repeat this,
+        and the mystery becomes manageable, safe, familiar. The story stops being a mirror and
         hardens into a wall.
       </p>
 
       <p>
-        But if there is a divine reality, it would not shrink to fit inside
-        our categories. It would not be limited by our metaphors or bound by
-        our scriptures. It would be larger than our favourite story about it
-        -- including this one. Any description we give is already too small.
+        But if there is a divine reality, it would not shrink to fit inside our categories.
+        It would not be limited by our metaphors or bound by our scriptures.
+        It would be larger than our favourite story about it — including this one.
+        Any description we give is already too small.
       </p>
 
       <p>
-        This is the paradox: we long to know, to define, to be sure -- and
-        yet whatever is truly infinite cannot be fully captured by a mind
-        that forgets, misremembers, and fears. Our language reaches upward
-        like a child's hand toward the sky: sincere, but never complete.
+        This is the paradox: we long to know, to define, to be sure — and yet whatever is truly infinite
+        cannot be fully captured by a mind that forgets, misremembers, and fears.
+        Our language reaches upward like a child's hand toward the sky: sincere, but never complete.
       </p>
 
       <p>
-        Perhaps the honest path is not to cling to perfect answers, but to
-        walk with a humble question. Not "I know what God is," but "Whatever
-        the Truth is, let it find me changing." Not a system to defend, but a
-        mystery to live inside.
+        Perhaps the honest path is not to cling to perfect answers, but to walk with a humble question.
+        Not “I know what God is,” but “Whatever the Truth is, let it find me changing.”
+        Not a system to defend, but a mystery to live inside.
       </p>
 
       <hr>
 
       <p style="font-size:.9rem;color:var(--muted);">
-        These thoughts are not theology or doctrine. They are simply one
-        person's attempt to sit honestly with doubt, faith, and the
-        possibility that the most sacred answer might be:
-        <em>"I do not know -- but I am listening."</em>
+        These thoughts are personal reflections — not doctrine, not instruction, not authority.
+        If there is one sacred sentence here, it is simply:
+        <em>“I do not know — but I am listening.”</em>
       </p>
-
     </article>
   </main>
-
-  <script>
-    /* Page identity (fallback for header + sharing logic) */
-    window.REFLECTION_PAGE = {
-      slug: "moral-choice",
-      title: "The Moral Choice of Duality",
-      cover: "/reflections/pages/moral-choice/moralchoice.jpg",
-      url: "https://stonegrillresto.net/reflections/pages/moral-choice/read.html"
-    };
-
-    /* AUDIO TRACKS */
-    const TRACKS = [
-      { title: "Moral Choice", desc: "Narration", src: "/reflections/pages/moral-choice/moralchoice.mp3?v=1" }
-    ];
-
-    const audio = document.getElementById("reflectionAudio");
-    const source = document.getElementById("audioSource");
-    const trackList = document.getElementById("trackList");
-
-    function formatTime(seconds){
-      if (!isFinite(seconds) || seconds < 0) return "";
-      const m = Math.floor(seconds / 60);
-      const s = Math.floor(seconds % 60);
-      return m + ":" + String(s).padStart(2,"0");
-    }
-
-    async function getDuration(src){
-      return new Promise((resolve) => {
-        if(!src) return resolve("");
-        const a = document.createElement("audio");
-        a.preload = "metadata";
-        a.src = src;
-        a.addEventListener("loadedmetadata", () => resolve(formatTime(a.duration)));
-        a.addEventListener("error", () => resolve(""));
-      });
-    }
-
-    function setActive(index){
-      const items = trackList.querySelectorAll(".track");
-      items.forEach((el,i)=> el.classList.toggle("active", i===index));
-    }
-
-    function setTrack(index, autoplay=false){
-      const t = TRACKS[index];
-      if(!t || !t.src) return;
-      source.src = t.src;
-      audio.load();
-      setActive(index);
-      if(autoplay){
-        audio.play().catch(()=>{});
-      }
-    }
-
-    async function renderTracks(){
-      trackList.innerHTML = "";
-      const hasAny = TRACKS.some(t => t && t.src && t.src.trim());
-      if(!hasAny){
-        trackList.style.display = "none";
-        return;
-      }
-
-      for(let i=0;i<TRACKS.length;i++){
-        const t = TRACKS[i];
-        if(!t || !t.src || !t.src.trim()) continue;
-
-        const li = document.createElement("li");
-        li.className = "track";
-        li.setAttribute("role","button");
-        li.setAttribute("tabindex","0");
-
-        const left = document.createElement("div");
-        left.className = "track-left";
-
-        const name = document.createElement("div");
-        name.className = "track-name";
-        name.textContent = t.title || ("Track " + (i+1));
-
-        const desc = document.createElement("div");
-        desc.className = "track-desc";
-        desc.textContent = t.desc || "";
-
-        left.appendChild(name);
-        left.appendChild(desc);
-
-        const right = document.createElement("div");
-        right.className = "track-right";
-        right.textContent = "";
-
-        li.appendChild(left);
-        li.appendChild(right);
-
-        li.addEventListener("click", ()=> setTrack(i, true));
-        li.addEventListener("keydown", (e)=>{
-          if(e.key === "Enter" || e.key === " "){
-            e.preventDefault();
-            setTrack(i, true);
-          }
-        });
-
-        trackList.appendChild(li);
-
-        const dur = await getDuration(t.src);
-        right.textContent = dur;
-      }
-
-      const firstIndex = TRACKS.findIndex(t => t && t.src && t.src.trim());
-      if(firstIndex >= 0) setTrack(firstIndex, false);
-    }
-
-    renderTracks();
-
-    // Share fallback
-    document.getElementById("shareFallback").addEventListener("click", async (e)=>{
-      e.preventDefault();
-      const shareData = {
-        title: "The Moral Choice of Duality",
-        text: "True goodness requires the capacity to do harm and the decision not to.",
-        url: window.location.href
-      };
-      try{
-        if(navigator.share){
-          await navigator.share(shareData);
-        }else{
-          await navigator.clipboard.writeText(shareData.url);
-          alert("Link copied!");
-        }
-      }catch(_){}
-    });
-
-    // Service Worker (optional)
-    if ("serviceWorker" in navigator) {
-      navigator.serviceWorker.register("/reflections/service-worker.js").catch(()=>{});
-    }
-  </script>
 </body>
 </html>
