--- a/reflections/pages/transcendence/read.html
+++ b/reflections/pages/transcendence/read.html
@@ -2,221 +2,88 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-  <!-- ============================================================
-       SEO + SOCIAL META TAGS
-       ✏️ EDIT THESE FOR EACH NEW PAGE
-  ============================================================ -->
-  <title>The Enigma of Transcendence-- Solitude Reflections · Ninox Antolihao</title>
+  <title>Transcendence — Solitude Reflections · Ninox Antolihao</title>
+  <meta name="description" content="On the quiet movement beyond ego, beyond fear, and into the wider self that can carry suffering without becoming it." />
 
-  <meta name="description" content="✏️ Unraveling the Enigma of Absolute Truth">
+  <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/transcendence/read.html" />
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="Transcendence — Solitude Reflections" />
+  <meta property="og:description" content="A reflection on going beyond the narrow self into a wider inner freedom." />
+  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/transcendence/transcendence.jpg" />
+  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/transcendence/read.html" />
+  <meta name="twitter:card" content="summary_large_image" />
 
-  <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/transcendence/read.html">
+  <link rel="icon" href="/reflections/assets/favicon.ico" />
+  <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=21" />
+  <link rel="stylesheet" href="/reflections/assets/reflections.css?v=1" />
 
-  <!-- Open Graph -->
-  <meta property="og:type" content="article">
-  <meta property="og:title" content="The Enigma of Transcendence -- Solitude Reflections">
-  <meta property="og:description" content="✏️ Unraveling the Enigma of Absolute Truth">
-  <meta property="og:image" content="/reflections/pages/transcendence/share.jpg">
-  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/transcendence/read.html">
-
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="The lll -- Solitude Reflections">
-  <meta name="twitter:description" content="✏️ Unraveling the Enigma of Absolute Truth">
-  <meta name="twitter:image" content="/reflections/pages/transcendence/share.jpg">
-
-  <!-- JSON-LD -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Article",
-    "headline": "The Enigma of Transcendence -- Solitude Reflections",
-    "author": {
-      "@type": "Person",
-      "name": "Ninox Antolihao"
-    },
-    "image": "/reflections/pages/the-paradox-of-god/share.jpg",
-    "publisher": {
-      "@type": "Organization",
-      "name": "Stone Grill Press",
-      "logo": {
-        "@type": "ImageObject",
-        "url": "/reflections/assets/logo1.PNG"
-      }
-    },
-    "description": "✏️ Same description again.",
-    "mainEntityOfPage": "https://stonegrillresto.net/reflections/pages/transcendence/read.html"
-  }
-  </script>
-
-  <!-- ============================================================
-       UNIFIED REFLECTIONS CSS  (DO NOT EDIT)
-  ============================================================ -->
-  <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=22">
-
+  <style>
+    :root{--bg:#1f1815;--paper:#2a211e;--ink:#f3e6dd;--muted:#c9b0a4;--accent:#ffb873;}
+    body{margin:0;background:var(--bg);color:var(--ink);font-family:system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;line-height:1.75;}
+    main{max-width:900px;margin:0 auto;padding:7.2rem 1rem 3.2rem;}
+    .paper{background:var(--paper);border:1px solid rgba(255,255,255,.06);border-radius:16px;padding:1.2rem 1.1rem;box-shadow:0 18px 60px rgba(0,0,0,.45);}
+    .cover{width:100%;border-radius:14px;display:block;border:1px solid rgba(255,255,255,.07);margin-bottom:1rem;background:#000;}
+    h1{margin:.2rem 0 .4rem;line-height:1.15;letter-spacing:.2px;font-size:1.8rem;}
+    .subtitle{margin:0 0 1rem;color:var(--muted);font-size:1.02rem;}
+    .audio-wrap{margin:1rem 0 1.2rem;padding:.9rem;border-radius:14px;border:1px solid rgba(255,255,255,.08);background:rgba(0,0,0,.15);}
+    hr{border:0;border-top:1px solid rgba(255,255,255,.10);margin:1.25rem 0;}
+  </style>
 </head>
 
 <body>
+  <div id="reflectionsHeader" data-current="transcendence"></div>
+  <section class="audio-wrap" id="audio"></section>
 
-  <!-- ============================================================
-       UNIFIED HEADER PLACEHOLDER (DO NOT EDIT)
-  ============================================================ -->
-  <div id="ref-header-placeholder"></div>
+  <script>
+    window.REFLECTION_PAGE = {
+      slug: "transcendence",
+      title: "Transcendence",
+      cover: "/reflections/pages/transcendence/transcendence.jpg",
+      url: "https://stonegrillresto.net/reflections/pages/transcendence/read.html"
+    };
 
-  <main class="page-content">
+    window.REFLECTION_AUDIO = [
+      { title: "Transcendence", src: "/reflections/pages/transcendence/transcendence.mp3" },
+      { title: "Transcendence (Short)", src: "/reflections/pages/transcendence/transcendence-short.mp3" }
+    ];
+  </script>
 
-    <!-- ============================================================
-         PAGE TITLE + SUBTITLE
-         ✏️ EDIT THESE FOR EACH PAGE
-    ============================================================ -->
-    <header class="page-header" style="max-width:800px;margin:0 auto 0.8rem auto;">
-      <h1>The Enigma of Transcendence</h1>
-      <p class="page-subtitle">A Solitude Reflection by Ninox Antolihao</p>
+  <script src="/reflections/assets/reflections-header.js?v=21"></script>
 
-      <!-- Scrolling subtitle -->
-      <div class="scrolling-subtitle">
-        <span>✏️ embracing the immanent task and accepting the reality of our subjective, limited lives and courageously creating our own relative meaning within the beautiful, messy, and fundamentally un-absolutist world.</span>
+  <main>
+    <article class="paper">
+      <img class="cover" src="/reflections/pages/transcendence/transcendence.jpg" alt="Transcendence cover">
+
+      <h1>Transcendence</h1>
+      <div class="subtitle">
+        A Solitude Reflection by Ninox Antolihao<br>
+        On moving beyond the narrow self.
       </div>
-    </header>
 
-    <!-- ============================================================
-         AUDIO PLAYER + PLAYLIST
-         ✏️ EDIT MP3 FILE PATHS + TITLES ONLY
-    ============================================================ -->
-    <section class="audio-wrap">
-      <div class="audio-wrapper">
-        <audio id="reflectionAudio" controls preload="metadata">
-          <source id="audioSource" src="" type="audio/mpeg">
-        </audio>
-
-        <div class="playlist">
-
-          <!-- TRACK 1 -->
-          <div class="playlist-row active"
-               data-src="/reflections/pages/transcendence/theshieldoftranscendence.mp3">
-            <div class="playlist-main">
-              <div class="playlist-title">The Shield of Transcendence</div>
-              <div class="playlist-sub">✏️ Unraveling the Enigma of Absolute Truth</div>
-            </div>
-            <div class="playlist-duration">--:--</div>
-          </div>
-
-          <!-- TRACK 2 (optional) -->
- 
-          <div class="playlist-row"
-               data-src="/reflections/pages/transcendence/transcendence.mp3">
-            <div class="playlist-main">
-              <div class="playlist-title">Transcendence</div>
-              <div class="playlist-sub">female version</div>
-            </div>
-            <div class="playlist-duration">--:--</div>
-          </div>
-        
-
-        </div>
-      </div>
-    </section>
-    <!-- ============================================================
-         MAIN CONTENT (YOUR REFLECTION TEXT)
-         ✏️ EDIT THIS SECTION COMPLETELY
-    ============================================================ -->
-      <article>
-      <h2> The Enigma of Transcendence</h2>
-
-      <h3>Introduction</h3>
       <p>
-        The human mind, bound by the limits of space, time, and perception, inevitably asks whether anything exists beyond its immediate experience. This fundamental inquiry forms the philosophical journey from transcendence to Absolute Reality. Transcendence, meaning "to go beyond," describes the act of searching for something that exceeds the material world, while the Absolute Reality is the ultimate, non-dependent, perfect, and unified goal of that search. The concept of the Absolute is not a scientific hypothesis but a logical necessity posited to resolve the inescapable flaws, dualities, and contradictions observed within our subjective, changing, and limited everyday existence.
+        Transcendence is often imagined as escape — as rising above pain, above human weakness, above the messy earth.
+        But real transcendence is not an exit. It is an expansion.
       </p>
 
-      <div class="rule"></div>
-
-      <h3>The Necessity of Transcendence: Resolving Flaws and Dualities</h3>
       <p>
-        The initial philosophical impetus for positing an Absolute Reality is the realization of the contingency and imperfection of the material world. This realization creates a profound set of problems that cannot be solved by material evidence alone:
+        It is the moment the self grows wide enough to hold discomfort without collapsing into it.
+        The moment you can feel fear without letting fear drive.
+        The moment you can carry grief without turning grief into identity.
       </p>
 
-      <h3>The Problem of Imperfection (Plato's Forms)</h3>
       <p>
-        Every physical object is temporary and flawed. A drawn circle is always imperfect; a just law is always applied unevenly. Yet, the human mind possesses the concept of perfection--the perfect circle, the perfect idea of Justice. Philosophers like Plato argued that if all we experience are imperfect copies, there must logically be a perfect, non-material source where those ideals reside. This Realm of Forms is the first step toward the Absolute, representing a reality transcendent to our senses.
+        The ego wants control. Transcendence learns surrender — not surrender to defeat,
+        but surrender to reality as it is, so wisdom can move through you without distortion.
       </p>
 
-      <h3>The Problem of Causation (The First Cause)</h3>
-      <p>
-        In the material world, everything is dependent; every effect has a prior cause, leading to an infinite regress. To halt this chain and provide a sufficient explanation for the very existence of the universe, thinkers concluded there must be a First Cause or Unmoved Mover. This entity must be Absolute--existing independently and needing nothing external for its being. Transcendence, in this case, is the intellectual act of moving beyond the chain of dependent causes to assert a non-dependent origin.
-      </p>
+      <hr>
 
-      <h3>The Problem of Subjectivity (The Need for Order)</h3>
-      <p>
-        Our subjective experience, perfectly captured by the "6 vs. 9" analogy, proves that every perception is relative to the observer. If all truth, morality, and knowledge are purely subjective, chaos ensues. The assertion of an Objective Reality or Absolute provides a pragmatic framework for order and a non-human referee for conflicts. The Absolute functions as the necessary standard against which all relative claims can be measured, thereby providing a basis for universal morality and truth.
-      </p>
-
-      <div class="rule"></div>
-
-      <h3>The Paradoxical Nature of the Absolute</h3>
-      <p>
-        While the Absolute is conceived as a logical necessity, its transcendent nature creates a fundamental paradox that fuels modern philosophical skepticism:
-      </p>
-
-      <h3>The Mind's Limit (The Software/Hardware Dilemma)</h3>
-      <p>
-        The Absolute is defined as being outside of human thought and beyond the mind's capabilities because the mind and its concepts (time, space, language) are part of the relative system it is trying to explain. As observed, this creates the "software/hardware dilemma": the Software (Mind) can detect the existence of the Hardware (Absolute Reality) but cannot truly experience or comprehend its fundamental nature. This intellectual dead-end forces two responses:
-      </p>
-      <ul>
-        <li><strong>Mysticism:</strong> Embrace the paradox and seek the Absolute through non-rational means, such as mystical intuition or spiritual revelation, accepting that the experience will be ineffable (beyond words).</li>
-        <li><strong>Skepticism (The Critique):</strong> Reject the premise entirely. Critics argue that the claim that the Absolute is unknowable is merely an alibi that protects the idea from being tested. The failure to prove its existence suggests that the Absolute is not a discovered truth but a powerful, necessary conceptual artifact--an idea invented by the mind to resolve its own anxiety over a meaningless, subjective universe.</li>
-      </ul>
-
-      <div class="rule"></div>
-
-      <h3>Conclusion</h3>
-      <p>
-        The philosophical journey from transcendence to the Absolute Reality is an expression of humanity's deepest intellectual longing for unity and certainty. It begins by noticing the undeniable flaws and dualities of our world--the lack of an ultimate cause, the impossibility of perfection, and the chaos of subjectivity. The Absolute is the ultimate goal, the hypothetical Oneness that resolves all these conflicts.
-      </p>
-      <p>
-        However, the modern crisis lies in the realization that the necessity of the Absolute does not guarantee its existence. Contemporary thought, particularly Existentialism, concludes that the pursuit of a transcendent, objective Absolute is a dangerous form of escapism that fosters imbalance. Instead, it advocates for abandoning the search for a pre-existing Absolute and embracing the immanent task: accepting the reality of our subjective, limited lives and courageously creating our own relative meaning within the beautiful, messy, and fundamentally un-absolutist world.
+      <p style="font-size:.9rem;color:var(--muted);">
+        The goal is not to become untouched. The goal is to become unbroken — even while touched.
       </p>
     </article>
-
-    <!-- Footer -->
-    <footer>
-      <p>© 2025 Ninox Antolihao · First Edition -- Stone Grill Press · Leyte, Philippines</p>
-    </footer>
-
   </main>
-
-  <!-- ============================================================
-       UNIFIED HEADER + MENU LOGIC (DO NOT EDIT)
-  ============================================================ -->
-  <script src="/reflections/assets/reflections-header.js?v=1" defer></script>
-
-  <!-- ============================================================
-       SHARE BUTTON LOGIC (DO NOT EDIT)
-  ============================================================ -->
-  <script>
-    function sharePage() {
-      if (navigator.share) {
-        navigator.share({
-          title: document.title,
-          text: "Read this reflection by Ninox Antolihao.",
-          url: window.location.href
-        });
-      } else {
-        alert("Sharing not supported on this device.");
-      }
-    }
-  </script>
-
-  <!-- ============================================================
-       SERVICE WORKER (OPTIONAL BUT RECOMMENDED)
-       DO NOT EDIT unless file path changes
-  ============================================================ -->
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/reflections/sw.js');
-    }
-  </script>
-
 </body>
 </html>
