--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -20,24 +20,124 @@
   <link rel="stylesheet" href="/reflections/assets/reflections.css?v=1" />
 
   <style>
-    :root{--bg:#1f1815;--paper:#2a211e;--ink:#f3e6dd;--muted:#c9b0a4;--accent:#ffb873;}
-    body{margin:0;background:var(--bg);color:var(--ink);font-family:system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;line-height:1.75;}
-    main{max-width:900px;margin:0 auto;padding:7.2rem 1rem 3.2rem;}
-    .paper{background:var(--paper);border:1px solid rgba(255,255,255,.06);border-radius:16px;padding:1.2rem 1.1rem;box-shadow:0 18px 60px rgba(0,0,0,.45);}
-    .cover{width:100%;border-radius:14px;display:block;border:1px solid rgba(255,255,255,.07);margin-bottom:1rem;background:#000;}
-    h1{margin:.2rem 0 .4rem;line-height:1.15;letter-spacing:.2px;font-size:1.8rem;}
-    .subtitle{margin:0 0 1rem;color:var(--muted);font-size:1.02rem;}
-    .audio-wrap{margin:1rem 0 1.2rem;padding:.9rem;border-radius:14px;border:1px solid rgba(255,255,255,.08);background:rgba(0,0,0,.15);}
-    hr{border:0;border-top:1px solid rgba(255,255,255,.10);margin:1.25rem 0;}
+    :root{
+      --bg:#1f1815;
+      --paper:#2a211e;
+      --ink:#f3e6dd;
+      --muted:#c9b0a4;
+      --accent:#ffb873;
+    }
+
+    body{
+      margin:0;
+      background:var(--bg);
+      color:var(--ink);
+      font-family:system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
+      line-height:1.75;
+    }
+
+    /* Give space for fixed unified header */
+    main{
+      max-width:900px;
+      margin:0 auto;
+      padding:7.2rem 1rem 3.2rem;
+    }
+
+    .paper{
+      background:var(--paper);
+      border:1px solid rgba(255,255,255,.06);
+      border-radius:16px;
+      padding:1.2rem 1.1rem;
+      box-shadow:0 18px 60px rgba(0,0,0,.45);
+    }
+
+    /* ✅ Cover image: fit + consistent size (not too huge) */
+    .cover{
+      width:100%;
+      border-radius:14px;
+      display:block;
+      border:1px solid rgba(255,255,255,.07);
+      margin-bottom:1rem;
+      background:#000;
+
+      /* added */
+      max-height:420px;
+      object-fit:cover;
+      object-position:center;
+    }
+
+    h1{
+      margin:.2rem 0 .4rem;
+      line-height:1.15;
+      letter-spacing:.2px;
+      font-size:1.8rem;
+    }
+
+    .subtitle{
+      margin:0 0 1rem;
+      color:var(--muted);
+      font-size:1.02rem;
+    }
+
+    /* ✅ Audio area: keep visible + consistent */
+    .audio-wrap{
+      margin:0 0 1rem;
+      padding:.9rem;
+      border-radius:14px;
+      border:1px solid rgba(255,255,255,.08);
+      background:rgba(0,0,0,.15);
+    }
+
+    hr{
+      border:0;
+      border-top:1px solid rgba(255,255,255,.10);
+      margin:1.25rem 0;
+    }
+
+    /* ============================================================
+       ✅ UNIFIED HEADER OVERRIDES (NO REDESIGN)
+       Goal: hamburger + pills on LEFT side in desktop + mobile
+       Classes come from /reflections/assets/reflections-header.css
+    ============================================================ */
+
+    /* Keep header layout but move actions group to the left */
+    .ref-header-inner{
+      justify-content:flex-start; /* instead of space-between */
+      gap:.75rem;
+    }
+
+    /* Put actions (hamburger + pills) FIRST on the left */
+    .ref-actions{
+      order:-1;
+      margin-right:.35rem;
+    }
+
+    /* Keep the brand/title group next */
+    .ref-left{
+      order:0;
+    }
+
+    /* If the drawer title area gets tight, allow header to wrap a bit nicer */
+    .ref-left, .ref-actions{
+      min-width:0;
+    }
+
+    /* Mobile: keep it tidy */
+    @media (max-width:640px){
+      .ref-header-inner{
+        justify-content:flex-start; /* ensure left-first stays */
+      }
+      .ref-actions{
+        width:100%;
+        justify-content:space-between;
+      }
+    }
   </style>
 </head>
 
 <body>
   <!-- UNIFIED HEADER MOUNT -->
   <div id="reflectionsHeader" data-current="the-paradox-of-god"></div>
-
-  <!-- UNIFIED AUDIO MOUNT -->
-  <section class="audio-wrap" id="audio"></section>
 
   <!-- PAGE IDENTITY (for title/share fallback in unified JS) -->
   <script>
@@ -59,6 +159,9 @@
   <script src="/reflections/assets/reflections-header.js?v=21"></script>
 
   <main>
+    <!-- ✅ UNIFIED AUDIO MOUNT (MOVED INSIDE MAIN so it shows on desktop) -->
+    <section class="audio-wrap" id="audio"></section>
+
     <article class="paper">
       <img class="cover" src="/reflections/pages/the-paradox-of-god/paradoxofgod.jpg" alt="The Paradox of God cover">
 
